--- a/components/ProjectCard/ProjectCard.css
+++ b/components/ProjectCard/ProjectCard.css
@@ -1,6 +1,6 @@
 .project-card {
-    width: 80%;
-    height: auto;
+  width: 50%;
+     height: auto;
     display: flex;
     flex-direction:row;
     flex-wrap: wrap;
@@ -17,6 +17,7 @@
     width: 100%;
     border-radius: 0.4rem;
     object-fit: cover;
+    justify-content: center;
     height: 250px;           
     object-position: center;
     padding: 25px;
@@ -31,28 +32,29 @@
   }
 
   @media (max-width: 770px) {
+    .project-card{
+      width: auto;
+    }
     .project-card > .header {
       display: flex;
       flex-direction: column;
     }
   }
 
-  .project-card > .header > div {
-    display: flex;
-    margin: 5px;
-    justify-content: space-around;
-    height: auto;
-    width: 100%;
 
-  }
-
-
-  .project-card > .detail {
+  .project-card  > .content {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    height: auto;
+    width: 100%;
+    margin: 5px;
+    padding: 5px;
+    gap: 20px;
   }
-  
+
   .project-card > .detail > .tech {
     color: var(--divider);
     margin: 10px;
